Update ParseFormulaEngine.java
Поддержка версий джавы меньше 20.
Support for Java versions less than 20.